--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,27 @@
   <groupId>com.io7m.bugs</groupId>
   <artifactId>mvn-bug-20151113</artifactId>
   <version>0.1.0</version>
-
   <packaging>maven-plugin</packaging>
+  <properties>
+    <mavenVersion>3.3.3</mavenVersion>
+  </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
-      <version>3.0</version>
+      <version>${mavenVersion}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-core</artifactId>
+      <version>${mavenVersion}</version>
+    </dependency>  
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-compat</artifactId>
+      <version>${mavenVersion}</version>
+    </dependency>      
     <dependency>
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
@@ -28,7 +40,6 @@
       <artifactId>maven-plugin-tools-api</artifactId>
       <version>3.4</version>
     </dependency>
-
     <dependency>
       <groupId>org.apache.maven.plugin-testing</groupId>
       <artifactId>maven-plugin-testing-harness</artifactId>
